# foo-yc20

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Enter-VsDevShell.ps1  Makefile  README  build-windows-msvc.ps1  build-windows.ps1
.github/workflows/: lv2-build.yml
debian/: changelog  control  copyright  rules
faust/: mixer.dsp
include/: foo-yc20-os.h  foo-yc20.h
packaging/aptrepo-bootstrap/: .gitignore
packaging/aptrepo-bootstrap/conf/: distributions
scripts/: bump-version.sh  update-debian-changelog.sh
src/: faust-dsp-plugin.cpp  faust-dsp-standalone.cpp  lv2.cpp
src/foo-yc20.lv2/: foo-yc20.ttl  manifest.ttl.in
src/jack-build/: config.h
tests/: headless-dsp-test.cpp
